--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   </head>
   <body>
     <header>
-      <a href="">WEBSTUDIO</a>
+      <a
+        href="file:///Users/nazariipopadiuk/Desktop/projects/goit-markup-hw-01/index.html"
+        >WEBSTUDIO
+      </a>
       <nav>
         <ul>
           <li>
@@ -21,7 +24,6 @@
           </li>
         </ul>
       </nav>
-      <address></address>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
       <a href="tel:+110001111111">+11(000)111-11-11</a><br />
     </header>
@@ -67,7 +69,7 @@
         <ul>
           <li>
             <img
-              src="/goit-markup-hw-01/images/img.jpg"
+              src="images/img.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -77,7 +79,7 @@
           </li>
           <li>
             <img
-              src="/goit-markup-hw-01/images/img-2.jpg"
+              src="images/img-2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -87,7 +89,7 @@
           </li>
           <li>
             <img
-              src="/goit-markup-hw-01/images/img-3.jpg"
+              src="images/img-3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -97,7 +99,7 @@
           </li>
           <li>
             <img
-              src="/goit-markup-hw-01/images/img-4.jpg"
+              src="images/img-4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
@@ -109,7 +111,10 @@
       </section>
     </main>
     <footer>
-      <a href="">WEBSTUDIO</a>
+      <a
+        href="file:///Users/nazariipopadiuk/Desktop/projects/goit-markup-hw-01/index.html"
+        >WEBSTUDIO
+      </a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth
