--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   </head>
   <body>
     <header>
-      <a
-        href="file:///Users/nazariipopadiuk/Desktop/projects/goit-markup-hw-01/index.html"
+      <a href="https://nazarii-popadiuk.github.io/goit-markup-hw-01/"
         >WEBSTUDIO
       </a>
       <nav>
@@ -111,8 +110,7 @@
       </section>
     </main>
     <footer>
-      <a
-        href="file:///Users/nazariipopadiuk/Desktop/projects/goit-markup-hw-01/index.html"
+      <a href="https://nazarii-popadiuk.github.io/goit-markup-hw-01/"
         >WEBSTUDIO
       </a>
       <p>
