--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="https://nazarii-popadiuk.github.io/goit-markup-hw-01/"
-        >WEBSTUDIO
-      </a>
       <nav>
+        <a href="./index.html">WeBStudio</a>
         <ul>
           <li>
             <a href="">Studio</a>
@@ -23,12 +21,18 @@
           </li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-      <a href="tel:+110001111111">+11(000)111-11-11</a><br />
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+          </li>
+          <li><a href="tel:+110001111111">+11(000)111-11-11</a><br /></li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
-        <h1>Effective Solutions for Your Business</h1>
+        <h2>Effective Solutions for Your Business</h2>
         <button type="button">Order service</button>
       </section>
       <section>
@@ -37,7 +41,7 @@
             <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
-              perfect and creative solutions.
+              perfect and creative solution.
             </p>
           </li>
           <li>
@@ -57,8 +61,8 @@
           <li>
             <h3>Technologies</h3>
             <p>
-              Design practice focused on digital experiences. We bring a deep
-              passion for problem-solving.
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
             </p>
           </li>
         </ul>
@@ -68,7 +72,7 @@
         <ul>
           <li>
             <img
-              src="images/img.jpg"
+              src="./images/img.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -78,7 +82,7 @@
           </li>
           <li>
             <img
-              src="images/img-2.jpg"
+              src="./images/img-2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -88,7 +92,7 @@
           </li>
           <li>
             <img
-              src="images/img-3.jpg"
+              src="./images/img-3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -98,7 +102,7 @@
           </li>
           <li>
             <img
-              src="images/img-4.jpg"
+              src="./images/img-4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
@@ -110,12 +114,10 @@
       </section>
     </main>
     <footer>
-      <a href="https://nazarii-popadiuk.github.io/goit-markup-hw-01/"
-        >WEBSTUDIO
-      </a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
-        marketing & growth
+        marketing & growth solutions.
       </p>
     </footer>
   </body>
