--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WeBStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="">Studio</a>
@@ -26,16 +26,19 @@
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
           </li>
-          <li><a href="tel:+110001111111">+11(000)111-11-11</a><br /></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a><br /></li>
         </ul>
       </address>
     </header>
     <main>
       <section>
-        <h2>Effective Solutions for Your Business</h2>
-        <button type="button">Order service</button>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
       <section>
+        <!--
+        <h2>Head for section 2</h2>
+      -->
         <ul>
           <li>
             <h3>Strategy</h3>
